# pyclawd

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  skills
.claude/: CLAUDE.md
.claude/docs/: BEST_PRACTICES.md  PYCLAWD_ROADMAP.md  README.md  REVIEW-FINDINGS.md  best-practices-ci-cd.md  best-practices-docs.md  best-practices-packaging.md  best-practices-project-structure.md  best-practices-quality.md  best-practices-testing.md  best-practices-typing.md  migration.md  pyproject-toml.md
.claude/skills/: pyclawd  pyclawd-docs  pyclawd-doctor  pyclawd-quality  pyclawd-tests
.github/workflows/: ci.yml
.pyclawd/: config.py
docs/: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  example.md  index.rst
examples/: config.reference.py
examples/golden_demo/: README.md  conftest.py  pytest.ini  test_meta.py  test_optimize.py
examples/golden_demo/golden/: test_optimize.json
src/pyclawd/: __init__.py  api.py  benchmark.py  benchmark_plugin.py  cli.py  discovery.py  doctor.py  golden.py  impact.py  logs.py  project.py  pytest_plugin.py  repo.py  run.py  skills_install.py  tests.py
src/pyclawd/commands/: __init__.py  api.py  benchmark.py  build.py  changelog.py  config.py  coverage.py  docs.py  golden.py  ls.py  new.py  quality.py  skills.py  test.py  web.py
src/pyclawd/scaffold/: __init__.py
src/pyclawd/scaffold/templates/: AGENTS.md.tmpl  CHANGELOG.md.tmpl  README.md.tmpl  ci.yml.tmpl  docs_cli.py.tmpl  docs_conf.py.tmpl  docs_example.md.tmpl  docs_index.rst.tmpl  docs_pyproject.toml.tmpl  gitignore.tmpl  init.py.tmpl  pyproject.toml.tmpl  test_smoke.py.tmpl
src/pyclawd/skills/: README.md  __init__.py
src/pyclawd/skills/pyclawd/: SKILL.md
src/pyclawd/skills/pyclawd-adopt/: SKILL.md
src/pyclawd/skills/pyclawd-docs/: SKILL.md
src/pyclawd/skills/pyclawd-doctor/: SKILL.md
src/pyclawd/skills/pyclawd-golden/: SKILL.md
src/pyclawd/skills/pyclawd-quality/: SKILL.md
src/pyclawd/skills/pyclawd-tests/: SKILL.md
src/pyclawd/skills/pyclawd-upgrade/: SKILL.md
src/pyclawd/skills/pyclawd/references/: docs.md  mental-model.md  packaging.md  quality.md  tests.md
src/pyclawd/web/: __init__.py  app.py  git.py  highlight.py  registry.py  sessions.py
src/pyclawd/web/static/: index.html
src/pyclawd/web/static/assets/: index-B8BlR5vV.css  index-BCOHQWyj.css  index-BE7CGXqf.js  index-BX1_g5ME.js  index-BlfgnnC3.js  index-Bm7y8boH.js  index-C71uAZox.js  index-C9ezW9Ye.css  index-CQrkiI_I.js  index-CjQwbkde.css  index-D-4T4FAL.js  index-Do9wbQPX.css  index-j7A6L7cf.css  index-w76sDp-o.css
src/pyclawd/web_frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/pyclawd/web_frontend/src/: App.tsx  api.ts  hooks.ts  index.css  main.tsx  store.tsx  types.ts
src/pyclawd/web_frontend/src/components/: AgentPanel.tsx  CommandPalette.tsx  DiffView.tsx  Markdown.tsx  ProjectSwitcher.tsx  RefPicker.tsx  ReviewTray.tsx  RunMenu.tsx  RunPanel.tsx  SessionPicker.tsx  SettingsModal.tsx  Sidebar.tsx  TopBar.tsx
src/pyclawd/web_frontend/src/components/ui/: button.tsx  popover.tsx
src/pyclawd/web_frontend/src/lib/: status.ts  utils.ts
tests/: api_surface.txt  pytest.ini  test_api_surface.py  test_benchmark.py  test_build_config.py  test_changelog.py  test_cli.py  test_core_logic.py  test_discovery_searchpath.py  test_docs.py  test_docs_integration.py  test_doctor.py  test_fixes.py  test_golden_cmd.py  test_golden_dogfood.py  test_golden_engine.py  test_golden_plugin.py  test_golden_store.py  test_impact.py  test_ls.py  test_new.py  test_project.py  test_reference_config.py  test_skills.py  test_test_cmd.py  test_tests_reporting.py  test_web_app.py  test_web_git.py  test_web_highlight.py  test_web_registry.py  test_web_sessions.py
tests/golden/: test_golden_dogfood.json
