[build-system]
requires = ["hatchling>=1.27"]  # >=1.27 for PEP 639 license-expression support
build-backend = "hatchling.build"

[project]
name = "pyclawd"
# Single source of truth for the version: src/pyclawd/__init__.py::__version__
# (dogfooding exactly what `pyclawd new` scaffolds — no duplicated version string).
dynamic = ["version"]
description = "A project-generic, config-driven dev-task runner for Python projects — env-correct execution, tiered tests, cached docs, and a doctor health-check, all driven by a per-project .pyclawd/config.py."
authors = [{ name = "Julian Blank", email = "blankjul@outlook.com" }]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
keywords = ["developer-tools", "task-runner", "cli", "testing", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/anyoptimization/pyclawd"
Source = "https://github.com/anyoptimization/pyclawd"
Issues = "https://github.com/anyoptimization/pyclawd/issues"

[project.scripts]
pyclawd = "pyclawd.cli:app"

# Auto-register the golden pytest plugin: a project installs pyclawd and
# `@pytest.mark.golden` + return-value snapshots work in bare pytest — no conftest
# line, no .pyclawd/config.py, no imports in test files.
[project.entry-points.pytest11]
golden = "pyclawd.pytest_plugin"

# Dev tooling lives in a PEP 735 dependency group — matching what `pyclawd new`
# scaffolds (the scaffold teaches `[dependency-groups]`, so the dogfood matches).
# A thin `[project.optional-dependencies] dev` mirrors it so the simple
# `pip install -e ".[dev]"` keeps working for tools that don't yet read groups.
# numpy is in dev only — it is an OPTIONAL runtime dep of golden (the engine
# imports it lazily and degrades without it), but the test suite exercises the
# numpy snapshot path, so CI needs it. End users who only snapshot floats need none.
[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6", "mypy>=1.10", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6", "mypy>=1.10", "numpy>=1.24"]

[tool.hatch.version]
path = "src/pyclawd/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyclawd"]
include = ["src/pyclawd/py.typed"]  # PEP 561 — ship the typed marker (we're a typed lib)

# Ship the CHANGELOG inside the wheel so `pyclawd changelog` works from any
# pip-installed pyclawd (PyPI included) — the agent-driven upgrade flow reads it to
# learn what changed since a project's config was authored. Editable dev checkouts
# fall back to the repo-root CHANGELOG.md.
[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "pyclawd/CHANGELOG.md"

# --------------------------------------------------------------------------- #
# Code-quality toolchain (dogfooded via `pyclawd lint/format/typecheck/check`).
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# docs/ is an isolated sub-project (its own pyproject + toolchain) — pyclawd's
# own lint/format/typecheck does not reach into it.
extend-exclude = ["docs"]

[tool.ruff.lint]
# A sensible, modern default: pyflakes (F), pycodestyle (E), isort (I),
# bugbear (B), pyupgrade (UP), flake8-simplify (SIM), comprehensions (C4).
# NOTE: `DOC` (pydoclint) is intentionally NOT selected — those rules only run
# under ruff's unstable `preview`, so selecting them is a silent no-op (and emits a
# warning). The Google docstring *convention* below + the `D` rules are the gate;
# the no-types / Args-Returns style is upheld by review and the `pyclawd ls` map.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "RUF", "PGH", "D"]
# `compile` and `format` shadow builtins by design — they are intentional
# command names (`pyclawd compile`, `pyclawd format`).

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# typer.Option / typer.Argument are the canonical Typer pattern for CLI defaults;
# they are not "mutable default" hazards — they create OptionInfo descriptors.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
"src/pyclawd/commands/build.py" = ["A001"]
"src/pyclawd/commands/quality.py" = ["A001"]
"tests/*.py" = ["D"]

[tool.mypy]
# Non-strict to start: wire up type-checking without drowning in noise.
python_version = "3.10"
files = ["src"]
warn_unused_configs = true
check_untyped_defs = true
# Needed for `pyclawd typecheck/check <file>` — prevents "Duplicate module"
# errors when mypy resolves a single source file by path instead of by name.
explicit_package_bases = true
mypy_path = "src"

# numpy is an optional dep used only via `Any` (lazy import in pyclawd.golden).
# Don't follow into its stubs: with python_version pinned to 3.10, mypy rejects the
# PEP 695 `type` statements in newer numpy stubs (installed on 3.12/3.13 runners).
# We gain nothing from numpy's types here, so skip them.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

# jupyter-cache + nbformat are docs-only optional deps imported lazily in docs.py
# (the `pyclawd docs failures` path); they live in the isolated ./docs env, not the
# base/dev env, so a CI `check` job without docs deps can't resolve them. Scope the
# missing-import allowance to exactly these (not a global ignore_missing_imports) so
# every other unstubbed import still errors.
[[tool.mypy.overrides]]
module = ["jupyter_cache.*", "nbformat", "nbformat.*"]
ignore_missing_imports = true
